# TestTask

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
captcha_custom/: apps.py  urls.py  views.py
comments/: consumers.py  models.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  views.py
comments/migrations/: 0001_initial.py
config/: asgi.py  celery.py  settings.py  urls.py
docs/: schema.sql
frontend/: .env.production  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: axios.ts
frontend/src/components/: Captcha.tsx  CommentForm.tsx  CommentNode.tsx
frontend/src/types/: captcha.ts  comment.ts
