[project]
name = "testtask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.4.0",
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "channels>=4.0.0",
    "channels-redis>=4.0.0",
    "daphne>=4.2.2",
]
